Task BJS2-702123 удалил придирки из ПРа Сделал лист мутабельным