@@ -1,5 +1,6 @@
 package school.faang.stream2.gmailrichfilters;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
@@ -10,29 +11,23 @@ public class Main {
     public static void main(String[] args) {
         EmailProcessor emailProcessor = new EmailProcessor();
 
-        // Список входящих писем
-        List<Email> emails = Arrays.asList(
+        List<Email> emails = new ArrayList<>(List.of(
                 new Email("Письмо 1", "Текст письма 1", false),
                 new Email("Письмо 2", "Текст письма 2", true),
                 new Email("Спам", "Текст спама", false)
-        );
+        ));
 
-        // Фильтр, который пропускает только важные письма
         Predicate<Email> importantFilter = Email::isImportant;
 
-        // Обработчик, который выводит тему письма в консоль
         Consumer<Email> printEmail = email -> System.out.println("Обработано письмо: " + email.getSubject());
 
-        // Преобразователь, который переводит текст письма в верхний регистр и сохраняет изменения
         Function<Email, String> toUpperCase = email -> {
             email.setBody(email.getBody().toUpperCase());
-            return email.getBody();  // Возвращает преобразованный текст
+            return email.getBody();
         };
 
-        // Обработка писем
-        emails = emailProcessor.processEmails(emails, importantFilter, printEmail, toUpperCase);
+        emailProcessor.processEmails(emails, importantFilter, printEmail, toUpperCase);
 
-        // Выводим обновленные письма, чтобы убедиться, что изменения сохранились
         emails.forEach(email ->
                 System.out.println("Тема: " + email.getSubject() + ", Тело письма: " + email.getBody()));
     }
